Update homepage title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Cyber Raptors</title>
+  <title>Welcome, EHS Cyber Raptors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -196,7 +196,7 @@ function goAdmin() {
   location.href = "admin.html";
 }
 function goDiscord() {
-  window.open("https://discord.gg/YOUR_INVITE", "_blank");
+  window.open("https://discord.gg/7RfR34ascE", "_blank");
 }
 </script>
 
