--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     body {
       background: black;
-      color: #ff3b3b;
       overflow: hidden;
+      color: white;
     }
 
     canvas {
@@ -36,9 +36,9 @@
       padding: 25px;
     }
 
-    /* ===== TITLE (KALI HOLY GLOW SWEEP) ===== */
+    /* ===== TITLE GLOW SWEEP ===== */
     .shimmer-title {
-      font-size: clamp(3rem, 6vw, 4.7rem);
+      font-size: clamp(3rem, 6vw, 4.8rem);
       font-weight: 900;
       letter-spacing: 2px;
 
@@ -46,11 +46,11 @@
 
       background: linear-gradient(
         120deg,
-        #ff0000 0%,
-        #ff0000 35%,
-        #00ccff 50%,
-        #ff0000 65%,
-        #ff0000 100%
+        #ff2b2b 0%,
+        #ff2b2b 35%,
+        #7df9ff 50%,
+        #ff2b2b 65%,
+        #ff2b2b 100%
       );
 
       background-size: 300% 100%;
@@ -60,44 +60,45 @@
       -webkit-text-fill-color: transparent;
 
       text-shadow:
-        0 0 12px rgba(255, 0, 0, 0.9),
-        0 0 25px rgba(255, 0, 0, 0.6),
-        0 0 40px rgba(0, 200, 255, 0.65),
-        0 0 70px rgba(0, 200, 255, 0.35);
+        0 0 14px rgba(255, 0, 0, 0.9),
+        0 0 35px rgba(255, 0, 0, 0.6),
+        0 0 30px rgba(125, 249, 255, 0.95),
+        0 0 70px rgba(125, 249, 255, 0.75),
+        0 0 110px rgba(125, 249, 255, 0.45);
 
-      animation: kaliGlowSweep 5s linear infinite;
+      animation: kaliGlowSweep 4s linear infinite;
     }
 
     @keyframes kaliGlowSweep {
       0% {
         background-position: 0% 50%;
       }
-
       100% {
         background-position: 100% 50%;
       }
     }
 
-    /* ===== TEXT ===== */
+    /* ===== CLUB LINE ===== */
     .club-line {
       font-size: 1.25rem;
       font-weight: 700;
       color: #3aa7ff;
-      text-shadow: 0 0 15px rgba(58, 167, 255, 0.7);
+      text-shadow: 0 0 12px rgba(58, 167, 255, 0.85);
     }
 
-    .mission {
-      max-width: 650px;
+    /* ===== DESCRIPTION ===== */
+    .desc {
+      max-width: 680px;
       font-size: 1.15rem;
-      color: #d0d8ff;
       line-height: 1.6;
+      color: #d0d8ff;
     }
 
     /* ===== BUTTONS ===== */
     .buttons {
       display: flex;
       gap: 18px;
-      margin-top: 25px;
+      margin-top: 20px;
       flex-wrap: wrap;
       justify-content: center;
     }
@@ -110,7 +111,7 @@
       font-size: 1rem;
       cursor: pointer;
       border-radius: 10px;
-      transition: 0.2s;
+      transition: 0.25s;
       box-shadow: 0 0 18px rgba(255, 0, 0, 0.45);
       display: flex;
       align-items: center;
@@ -120,7 +121,7 @@
     button:hover {
       background: #ff3b3b;
       color: black;
-      box-shadow: 0 0 35px rgba(255, 0, 0, 0.9);
+      box-shadow: 0 0 40px rgba(255, 0, 0, 0.95);
       transform: translateY(-2px);
     }
 
@@ -133,137 +134,133 @@
     /* ===== FOOTER ===== */
     footer {
       position: fixed;
-      bottom: 12px;
+      bottom: 14px;
       width: 100%;
       text-align: center;
       font-size: 0.9rem;
       color: #6a7cff;
-      letter-spacing: 1px;
     }
 
-    .madeby {
-      font-size: 0.8rem;
-      margin-top: 6px;
+    footer b {
       color: #ff3b3b;
-      text-shadow: 0 0 10px rgba(255, 0, 0, 0.7);
+      text-shadow: 0 0 10px rgba(255, 0, 0, 0.8);
     }
   </style>
 </head>
 
 <body>
 
-<canvas id="bg"></canvas>
+  <canvas id="bg"></canvas>
 
-<div class="center">
+  <div class="center">
 
-  <h1 class="shimmer-title">Welcome, Cyber Raptors</h1>
+    <h1 class="shimmer-title">Welcome, Cyber Raptors</h1>
 
-  <div class="club-line">
-    Eagle Crest High School Cybersecurity Club
+    <div class="club-line">
+      Eagle Crest High School Cybersecurity Club
+    </div>
+
+    <p class="desc">
+      Helping students understand how digital systems work and how to protect them.
+      Open to all grades. No experience required.
+    </p>
+
+    <div class="buttons">
+      <button onclick="goJoin()">Apply to Join</button>
+
+      <button class="social" onclick="goDiscord()">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/discord.svg">
+        Discord
+      </button>
+
+      <button class="social" onclick="goInstagram()">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/instagram.svg">
+        Instagram
+      </button>
+    </div>
+
   </div>
 
-  <div class="mission">
-    Helping kids understand how digital systems work and how to protect them.
-    Open to all grades. No experience required.
-  </div>
+  <footer>
+    <b>Made For Students By a Student</b>
+  </footer>
 
-  <div class="buttons">
-    <button onclick="goJoin()">Apply to Join</button>
+  <script>
+    /* ===== Neural Background ===== */
+    const canvas = document.getElementById("bg");
+    const ctx = canvas.getContext("2d");
 
-    <button class="social" onclick="goDiscord()">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/discord.svg">
-      Discord
-    </button>
-
-    <button class="social" onclick="goInstagram()">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/instagram.svg">
-      Instagram
-    </button>
-  </div>
-
-</div>
-
-<footer>
-  © Cyber Raptors · Eagle Crest Cybersecurity Club
-  <div class="madeby">Made For Students By a Student</div>
-</footer>
-
-<script>
-/* ===== Background Animation ===== */
-const canvas = document.getElementById("bg");
-const ctx = canvas.getContext("2d");
-
-function resize() {
-  canvas.width = innerWidth;
-  canvas.height = innerHeight;
-}
-addEventListener("resize", resize);
-resize();
-
-const nodes = [];
-const NODE_COUNT = 120;
-const MAX_DIST = 150;
-
-for (let i = 0; i < NODE_COUNT; i++) {
-  nodes.push({
-    x: Math.random() * canvas.width,
-    y: Math.random() * canvas.height,
-    vx: (Math.random() - 0.5) * 0.4,
-    vy: (Math.random() - 0.5) * 0.4
-  });
-}
-
-function animate() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-  for (let i = 0; i < nodes.length; i++) {
-    const n = nodes[i];
-    n.x += n.vx;
-    n.y += n.vy;
-
-    if (n.x < 0 || n.x > canvas.width) n.vx *= -1;
-    if (n.y < 0 || n.y > canvas.height) n.vy *= -1;
-
-    ctx.fillStyle = "#ff3b3b";
-    ctx.beginPath();
-    ctx.arc(n.x, n.y, 2, 0, Math.PI * 2);
-    ctx.fill();
-
-    for (let j = i + 1; j < nodes.length; j++) {
-      const m = nodes[j];
-      const d = Math.hypot(n.x - m.x, n.y - m.y);
-
-      if (d < MAX_DIST) {
-        ctx.strokeStyle = `rgba(255,0,0,${1 - d / MAX_DIST})`;
-        ctx.beginPath();
-        ctx.moveTo(n.x, n.y);
-        ctx.lineTo(m.x, m.y);
-        ctx.stroke();
-      }
+    function resize() {
+      canvas.width = innerWidth;
+      canvas.height = innerHeight;
     }
-  }
+    addEventListener("resize", resize);
+    resize();
 
-  requestAnimationFrame(animate);
-}
+    const nodes = [];
+    const NODE_COUNT = 120;
+    const MAX_DIST = 150;
 
-animate();
+    for (let i = 0; i < NODE_COUNT; i++) {
+      nodes.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        vx: (Math.random() - 0.5) * 0.4,
+        vy: (Math.random() - 0.5) * 0.4
+      });
+    }
 
-/* ===== Navigation ===== */
-function goJoin() {
-  location.href = "join.html";
-}
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-function goDiscord() {
-  window.open("https://discord.gg/7RfR34ascE", "_blank");
-}
+      for (let i = 0; i < nodes.length; i++) {
+        const n = nodes[i];
+        n.x += n.vx;
+        n.y += n.vy;
 
-function goInstagram() {
-  window.open(
-    "https://www.instagram.com/ehs_cybersecurity_club?igsh=amd6Nnk5MndjOWpk",
-    "_blank"
-  );
-}
-</script>
+        if (n.x < 0 || n.x > canvas.width) n.vx *= -1;
+        if (n.y < 0 || n.y > canvas.height) n.vy *= -1;
+
+        ctx.fillStyle = "#ff3b3b";
+        ctx.beginPath();
+        ctx.arc(n.x, n.y, 2, 0, Math.PI * 2);
+        ctx.fill();
+
+        for (let j = i + 1; j < nodes.length; j++) {
+          const m = nodes[j];
+          const d = Math.hypot(n.x - m.x, n.y - m.y);
+
+          if (d < MAX_DIST) {
+            ctx.strokeStyle = `rgba(255,0,0,${1 - d / MAX_DIST})`;
+            ctx.beginPath();
+            ctx.moveTo(n.x, n.y);
+            ctx.lineTo(m.x, m.y);
+            ctx.stroke();
+          }
+        }
+      }
+
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+
+    /* ===== NAVIGATION ===== */
+    function goJoin() {
+      location.href = "join.html";
+    }
+
+    function goDiscord() {
+      window.open("https://discord.gg/7RfR34ascE", "_blank");
+    }
+
+    function goInstagram() {
+      window.open(
+        "https://www.instagram.com/ehs_cybersecurity_club?igsh=amd6Nnk5MndjOWpk",
+        "_blank"
+      );
+    }
+  </script>
 
 </body>
 </html>
